# mokybrowsite

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
api/: bootstrap.py  database.py  main.py  settings.py
api/auth/: database.py  schemas.py  users.py
api/database/: models.py
api/email/: send_email.py
api/static/css/: career.css  news.css  style.css  works.css
api/templates/: base.html  career.html  index.html  news.html
api/transport/handlers/: admin.py  site.py  states.py  users_auth.py
backend/: test.db
backend/api/: __main__.py  bootstrap.py  database.py
backend/api/auth/: database.py  models.py  users.py
backend/api/transport/handlers/: admin.py  site.py  users_auth.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: script.js
frontend/static/css/: about-us.css  admin_dashboard.css  admin_login.css  career.css  news.css  smm.css  style.css  toast.css  works.css
frontend/static/js/: admin_login.js  smm.js
frontend/templates/: about-us.html  admin_dashboard.html  admin_login.html  base.html  career.html  email.html  smm.html  works.html
migrations/: env.py
tests/: test_main.py
