[tool.poetry]
name = "mokybrowsite"
version = "0.1.0"
description = ""
authors = ["mokybrow <mokybrow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = "0.99.1", extras = ["all"]}
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
psycopg2 = "^2.9.6"
psycopg2-binary = "^2.9.6"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.0"}
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
