[tool.poetry]
name = "mokybrowsite"
version = "0.1.0"
description = ""
authors = ["mokybrow <mokybrow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = "0.99.1", extras = ["all"]}
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.0"}
asyncpg = "^0.28.0"
aiosqlite = "^0.19.0"
requests = "^2.31.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
ruff = "^0.0.282"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
