[tool.poetry]
name = "mokybrowsite"
version = "0.1.0"
description = ""
authors = ["mokybrow <mokybrow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.101.0"}
asyncpg = "^0.28.0"
aiosqlite = "^0.19.0"
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.0"
ruff = "^0.0.282"
mypy = "^1.4.1"
alembic = "^1.11.2"
sqlalchemy = "^2.0.19"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.0"}
jinja2 = "^3.1.2"
fastapi-mail = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
